ajoute de checktoken et des protection des routes
